solve time-table overlap with decrease font size in small view; change links color; change responsive header-title with padding 2%;

--- a/css/main.css
+++ b/css/main.css
@@ -56,6 +56,10 @@ ul {
   margin: 0;
 }
 
+a {
+  color: #1199C3;
+}
+
 /*
  *
  * common
@@ -106,10 +110,6 @@ ul {
   width: 100%;
   margin: 0 auto;
   background-color: #000;
-}
-
-.header-logo {
-  height: 72px;
 }
 
 .header-title {
@@ -264,7 +264,6 @@ main {
   border-bottom: 1px solid #e0e0e0;
   padding: 1em;
   width: 100%;
-  /*background-color: #ecebe9;*/
 }
 
 .calendar-title {
@@ -313,7 +312,6 @@ main {
 }
 
 .time-title {
-  /*border-bottom: 1px solid #e0e0e0;*/
   display: block;
   font-weight: bold;
   font-size: 1.5em;
@@ -344,10 +342,6 @@ main {
   background-color: #eceff1;
 }
 
-.time-table td.winner {
-  font-weight: bold;
-}
-
 .time-table td:nth-child(3) {
   text-align: right;
 }
@@ -369,8 +363,7 @@ main {
   padding: 1em;
 }
 
-.links-title
- {
+.links-title {
   border-bottom: 1px solid #e0e0e0;
   background-color: #cacaca;
   color: #fff;
@@ -489,7 +482,7 @@ footer a {
 
 /*
  *
- * video
+ * videos
  *
  */
 
@@ -519,7 +512,7 @@ iframe:last-of-type {
 
 /*
  *
- * image
+ * images
  *
  */
 
@@ -549,27 +542,34 @@ figure {
  *
  */
 
-@media screen and (max-width: 320px) {
-  .header-title {
-    font-size: 1.4em;
-    line-height: 1.4em;
-  }
-}
 
-@media screen and (min-width: 420px) {
+@media screen and (max-width: 379px) {
+   .header-title {
+     font-size: 1.8em;
+     line-height: 1.4em;
+   }
+ }
+
+@media screen and (min-width: 380px) {
   .header-title {
-    font-size: 1.6em;
-    line-height: 1.6em;
+    font-size: 2.2em;
+    line-height: 1.8em;
   }
+  /*.wrapper {
+    padding: 0;
+  }*/
+
 }
 
 @media screen and (max-width: 549px) {
-  .links,
-  .videos {
-    display: none;
+  .header {
+    padding: 0;
   }
-  .hero {
-    height: 300px;
+  .description {
+    font-size: 0.8em;
+  }
+  .time {
+    font-size: 12px;
   }
   .nav {
     z-index: 10;
@@ -601,6 +601,16 @@ figure {
     width: 32px;
     fill: #e0e0e0;
   }
+  .hero {
+    height: 300px;
+  }
+  section {
+    margin-top: 0.5em;
+  }
+  .links,
+  .videos {
+    display: none;
+  }
 }
 
 @media screen and (min-width: 550px) {
@@ -615,6 +625,12 @@ figure {
   .header-title {
     font-size: 3.2em;
     line-height: 1.4em;
+  }
+}
+
+@media screen and (max-width: 699px) {
+  .header-title {
+    padding: 2%;
   }
 }
 
@@ -638,6 +654,7 @@ figure {
     line-height: 1.6em;
     margin: auto;
     text-align: center;
+    padding: 0;
   }
 }
 
